--- a/styles.css
+++ b/styles.css
@@ -692,3 +692,21 @@ button.right {
 button.left {
 	float:left;
 }
+
+.nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	list-style-type: none;
+	padding: 0;
+  }
+  
+  .nav li {
+	margin-right: 20px;
+  }
+  
+  .nav img {
+	width: 500px;
+	height: 500px;
+  }
+  
