--- a/styles.css
+++ b/styles.css
@@ -703,6 +703,11 @@ button.left {
   
   .navbar li {
 	margin-right: 20px;
+	border-bottom: 1px solid black;
+  }
+  
+  .navbar li:last-child {
+	border-bottom: none;
   }
   
   .navbar img {
