--- a/styles.css
+++ b/styles.css
@@ -703,7 +703,11 @@ button.left {
   
   .navbar li {
 	margin-right: 20px;
-	border-bottom: 1px solid black;
+	border-left: 1px solid black;
+  }
+  
+  .navbar li:first-child {
+	border-left: none;
   }
 
   
