fixing the bottom nav buttons and style

--- a/styles.css
+++ b/styles.css
@@ -674,7 +674,7 @@ blockquote {
 
 /* My Custom Styles */
 
-.footer-cards{
+.footer-cards, .bottom-buttons{
 	display: flex;
 	justify-content: space-between;
 	padding: 10px 50px 10px 50px;
