--- a/css/local.css
+++ b/css/local.css
@@ -11,6 +11,15 @@ body {
 		color: rgb(55, 53, 47);
 	}
 }
+.menu-items-wrapper.navbar{
+	padding:0;
+}
+.menu-items-wrapper.navbar .navbar-logo{
+	margin-left:auto;
+}
+.menu-items-wrapper.navbar .links .menu-item{
+	margin: 0;
+}
 
 body {
 	line-height: 1.5;
